initial work and rename (#1)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,28 @@
 [tool.poetry]
-name = "poetry-auto-docker-plugin"
+name = "poetry-dockerize-plugin"
 version = "0.1.0"
 description = "Package your Poetry application to a Docker image automatically."
 authors = ["Nicolò Boschi <boschi1997@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [
-    {include = "poetry_auto_docker_plugin", from = "."}
+    {include = "poetry_dockerize_plugin", from = "."}
 ]
 
 
 [tool.poetry.plugins."poetry.application.plugin"]
-auto-docker = "poetry_auto_docker_plugin.plugin:DockerApplicationPlugin"
+dockerize = "poetry_dockerize_plugin.plugin:DockerApplicationPlugin"
 
 [tool.poetry.dependencies]
 python = "^3.9"
 poetry = "^1.7.1"
 poetry-core = "^1.8.1"
 docker = "^6.1.3"
+pytest = "^7.4.4"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.4"
 
 [build-system]
 requires = ["poetry-core"]
