--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,38 @@
 [tool.poetry]
 name = "poetry-dockerize-plugin"
 version = "0.1.0"
-description = "Package your Poetry application to a Docker image automatically."
+description = "Poetry application to Docker, automatically."
 authors = ["Nicolò Boschi <boschi1997@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+keywords = ["poetry", "packaging", "docker"]
+repository = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
+documentation = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
+classifiers = [
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: System Administrators",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: Software Development :: Version Control :: Git",
+    "Topic :: System :: Archiving :: Packaging",
+    "Topic :: System :: Installation/Setup",
+    "Topic :: System :: Software Distribution",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "License :: OSI Approved :: MIT License"
+]
 packages = [
     {include = "poetry_dockerize_plugin", from = "."}
 ]
-
 
 [tool.poetry.plugins."poetry.application.plugin"]
 dockerize = "poetry_dockerize_plugin.plugin:DockerApplicationPlugin"
@@ -18,7 +42,6 @@ python = "^3.9"
 poetry = "^1.7.1"
 poetry-core = "^1.8.1"
 docker = "^6.1.3"
-pytest = "^7.4.4"
 
 
 [tool.poetry.group.test.dependencies]
