allow adding apt-packages and git dependencies

--- a/tests/test_project/pyproject.toml
+++ b/tests/test_project/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "app"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 flask = "*"
+llama-index = { git = "https://github.com/run-llama/llama_index.git", branch = "main" }
 
 [build-system]
 requires = ["poetry-core"]
@@ -17,3 +18,4 @@ build-backend = "poetry.core.masonry.api"
 tags = ["latest", "latest-dev", "0.1.0"]
 env = {PORT = "5001"}
 ports = ["5001"]
+apt-packages = ["curl"]
