--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release
 on:
   workflow_dispatch: {}
+  push:
+    tags:
+      - "*"
 
 concurrency:
   group: release-${{ github.workflow }}
