--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dockerize = "poetry_dockerize_plugin.plugin:DockerApplicationPlugin"
 python = "^3.9"
 poetry = "^1.7.1"
 poetry-core = "^1.8.1"
-docker = "^6.1.3"
+docker = "^7.1.0"
+requests = "^2.32.2"
 
 
 [tool.poetry.group.test.dependencies]
