--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ packages = [
 dockerize = "poetry_dockerize_plugin.plugin:DockerApplicationPlugin"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9"
 poetry = "^1.7.1"
 poetry-core = "^1.8.1"
 docker = "^7.1.0"
