feat: make poetry version configurable
new config entry "poetry-version"

if not set, the poetry.lock is parsed for the version. If that fails, 1.8.3 is used as fallback

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry
-
+      - name: Lock pyproject.toml in Test Project
+        run: |
+          poetry -C tests/dummy_project/ lock
       - name: Run unit tests
         run: |
           poetry install
