--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
+    env:
+      POETRY_VERSION: 1.8.3
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -25,8 +27,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry
-
+          python -m pip install poetry==$POETRY_VERSION
+      - name: Lock pyproject.toml in Test Project
+        run: |
+          poetry -C tests/dummy_project/ lock
       - name: Run unit tests
         run: |
           poetry install
