--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "poetry-dockerize-plugin"
-version = "1.3.1"
+version = "1.4.0"
 description = "Poetry application to Docker, automatically."
 authors = ["Nicolò Boschi <boschi1997@gmail.com>"]
 license = "MIT"
@@ -39,11 +39,12 @@ dockerize = "poetry_dockerize_plugin.plugin:DockerApplicationPlugin"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-poetry = "^1.7.1"
-poetry-core = "^1.8.1"
+poetry = ">1.7.1,<3"
+poetry-core = ">1.8.1,<3"
 docker = "^7.1.0"
 requests = "^2.32.2"
 python-dotenv = "^1.0.1"
+
 
 
 [tool.poetry.group.test.dependencies]
