feat: rename project and add uv support

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-DOCKERIZE_NAME=""
-DOCKERIZE_TAGS=""
-DOCKERIZE_ENTRYPOINT=""
-DOCKERIZE_PYTHON=""
-DOCKERIZE_PORTS=""
-DOCKERIZE_ENV=""
-DOCKERIZE_LABELS=""
-DOCKERIZE_APT_PACKAGES=""
-DOCKERIZE_BUILD_APT_PACKAGES=""
-DOCKERIZE_BUILD_POETRY_INSTALL_ARGS=""
-DOCKERIZE_BASE_IMAGE=""
-DOCKERIZE_EXTRA_BUILD_INSTRUCTIONS=""
-DOCKERIZE_EXTRA_RUNTIME_INSTRUCTIONS=""
+DPY_NAME=""
+DPY_TAGS=""
+DPY_ENTRYPOINT=""
+DPY_PYTHON=""
+DPY_PORTS=""
+DPY_ENV=""
+DPY_LABELS=""
+DPY_APT_PACKAGES=""
+DPY_BUILD_APT_PACKAGES=""
+DPY_BUILD_POETRY_INSTALL_ARGS=""
+DPY_BASE_IMAGE=""
+DPY_EXTRA_BUILD_INSTRUCTIONS=""
+DPY_EXTRA_RUNTIME_INSTRUCTIONS=""
