--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,19 @@
-[tool.poetry]
+[project]
 name = "poetry-dockerize-plugin"
 version = "1.4.0"
 description = "Poetry application to Docker, automatically."
-authors = ["Nicolò Boschi <boschi1997@gmail.com>"]
+authors = [
+    {name = "Nicolò Boschi", email = "boschi1997@gmail.com"}
+]
+maintainers = [
+    {name = "Nicolò Boschi", email = "boschi1997@gmail.com"},
+]
+requires-python = ">=3.9,<4.0"
 license = "MIT"
 readme = "README.md"
 keywords = ["poetry", "packaging", "docker"]
-repository = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
-documentation = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
+#repository = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
+#documentation = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
 classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Information Technology",
@@ -28,31 +34,32 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-    "License :: OSI Approved :: MIT License"
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
-packages = [
-    {include = "poetry_dockerize_plugin", from = "."}
+dependencies = [
+    "poetry-core>=1.8.1,<3",
+    "docker>=7.1.0",
+    "requests>=2.32.2",
+    "python-dotenv>=1.0.1",
+
 ]
+
+[project.scripts]
+dockerize = "dockerize.builder:entrypoint"
+
+[tool.uv]
+package = true
 
 [tool.poetry.plugins."poetry.application.plugin"]
-dockerize = "poetry_dockerize_plugin.plugin:DockerApplicationPlugin"
-
-[tool.poetry.dependencies]
-python = ">=3.9,<4.0"
-poetry = ">1.7.1,<3"
-poetry-core = ">1.8.1,<3"
-docker = "^7.1.0"
-requests = "^2.32.2"
-python-dotenv = "^1.0.1"
-
-
+dockerize = "dockerize.poetry_plugin:DockerApplicationPlugin"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.dockerize]
+entrypoint = ["uv", "run", "dockerize"]
+
 
 [tool.pytest.ini_options]
 log_cli = true
