--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "poetry-dockerize-plugin"
-version = "1.4.0"
-description = "Poetry application to Docker, automatically."
+name = "dockerpyze"
+version = "2.0.0"
+description = "Python applications to Docker, automatically."
 authors = [
     {name = "Nicolò Boschi", email = "boschi1997@gmail.com"}
 ]
@@ -11,9 +11,7 @@ maintainers = [
 requires-python = ">=3.9,<4.0"
 license = "MIT"
 readme = "README.md"
-keywords = ["poetry", "packaging", "docker"]
-#repository = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
-#documentation = "https://github.com/nicoloboschi/poetry-dockerize-plugin"
+keywords = ["poetry", "packaging", "docker", "uv"]
 classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Information Technology",
@@ -45,20 +43,23 @@ dependencies = [
 
 ]
 
+[project.urls]
+Homepage = "https://github.com/nicoloboschi/dockerpyze"
+Repository = "https://github.com/nicoloboschi/dockerpyze"
+Documentation = "https://github.com/nicoloboschi/dockerpyze"
+
 [project.scripts]
-dockerize = "dockerize.builder:entrypoint"
+dockerpyze = "dockerpyze.builder:entrypoint"
 
 [tool.uv]
 package = true
 
 [tool.poetry.plugins."poetry.application.plugin"]
-dockerize = "dockerize.poetry_plugin:DockerApplicationPlugin"
+dockerpyze = "dockerpyze.poetry_plugin:DockerApplicationPlugin"
 
-[tool.poetry.group.test.dependencies]
-pytest = "^7.4.4"
 
-[tool.dockerize]
-entrypoint = ["uv", "run", "dockerize"]
+[tool.dpy]
+entrypoint = ["uv", "run", "dockerpyze"]
 
 
 [tool.pytest.ini_options]
@@ -66,3 +67,8 @@ log_cli = true
 log_cli_level = "INFO"
 log_cli_format = "%(asctime)s %(levelname)s %(message)s"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
